--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.33",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.7",
+    "axios": "^1.6.7",
     "dlx": "^0.2.1",
     "init": "^0.1.2",
     "prettier": "^3.1.1",
