--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.7",
     "axios": "^1.6.7",
+    "babel-core": "7.0.0-bridge.0",
     "dlx": "^0.2.1",
     "init": "^0.1.2",
     "prettier": "^3.1.1",
@@ -24,6 +25,7 @@
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "storybook": "^7.6.16",
     "styled-components": "^6.1.2",
     "typescript": "^4.8.4",
