--- a/package.json
+++ b/package.json
@@ -3,34 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.1",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
-    "@types/react-redux": "^7.1.33",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "29.2.0",
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.23",
+    "@types/react-dom": "18.0.7",
+    "@types/react-redux": "7.1.24",
     "@types/styled-components": "^5.1.34",
-    "@types/uuid": "^9.0.7",
-    "axios": "^1.6.7",
-    "babel-core": "7.0.0-bridge.0",
-    "dlx": "^0.2.1",
-    "init": "^0.1.2",
+    "@types/uuid": "8.3.4",
+    "axios": "1.1.3",
     "prettier": "^3.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.4",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
+    "redux": "4.2.0",
     "redux-thunk": "^3.1.0",
     "storybook": "^7.6.16",
     "styled-components": "^6.1.2",
-    "typescript": "^4.8.4",
-    "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "typescript": "4.8.4",
+    "uuid": "9.0.0",
+    "web-vitals": "3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
