--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "8.3.4",
     "axios": "1.1.3",
+    "formik": "^2.4.5",
     "prettier": "^3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "redux": "4.2.0",
     "redux-thunk": "^3.1.0",
