--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    }
+  },
   "name": "1-lesson",
   "version": "0.1.0",
   "private": true,
@@ -20,7 +25,7 @@
     "@types/react-redux": "7.1.24",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "8.3.4",
-    "axios": "1.1.3",
+    "axios": "1.6.8",
     "formik": "^2.4.5",
     "prettier": "^3.1.1",
     "react": "18.2.0",
@@ -38,7 +43,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 9009",
