--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "29.2.0",
     "@types/node": "18.11.7",
-    "@types/react": "18.0.23",
-    "@types/react-dom": "18.0.7",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@types/react-redux": "7.1.24",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "8.3.4",
