--- a/package.json
+++ b/package.json
@@ -8,37 +8,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/material": "^5.15.15",
-    "@reduxjs/toolkit": "^2.2.3",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/jest": "29.2.0",
-    "@types/node": "18.11.7",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
+    "@babel/runtime": "7.23.6",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "4.11.3",
+    "@material-ui/lab": "4.0.0-alpha.61",
+    "@mui/icons-material": "5.15.2",
+    "@mui/material": "5.15.2",
+    "@reduxjs/toolkit": "2.0.1",
+    "@testing-library/jest-dom": "6.1.6",
+    "@testing-library/react": "14.1.2",
+    "@testing-library/user-event": "14.5.1",
+    "@types/jest": "29.5.11",
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
     "@types/react-redux": "7.1.24",
-    "@types/styled-components": "^5.1.34",
-    "@types/uuid": "8.3.4",
-    "axios": "1.6.8",
-    "formik": "^2.4.5",
-    "prettier": "^3.1.1",
+    "@types/styled-components": "5.1.34",
+    "@types/uuid": "9.0.7",
+    "axios": "1.6.3",
+    "formik": "2.4.5",
+    "prettier": "3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "8.0.4",
-    "react-router-dom": "^6.23.0",
+    "react-redux": "9.0.4",
+    "react-router-dom": "6.21.1",
     "react-scripts": "5.0.1",
     "redux": "4.2.0",
-    "redux-thunk": "^3.1.0",
-    "storybook": "^7.6.16",
-    "styled-components": "^6.1.2",
-    "typescript": "4.8.4",
-    "uuid": "9.0.0",
+    "redux-thunk": "3.1.0",
+    "storybook": "7.6.16",
+    "styled-components": "6.1.2",
+    "typescript": "^5.4.5",
+    "uuid": "9.0.1",
     "web-vitals": "3.0.4"
   },
   "scripts": {
