--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@material-ui/lab": "4.0.0-alpha.61",
     "@mui/icons-material": "5.15.2",
     "@mui/material": "5.15.2",
-    "@reduxjs/toolkit": "2.0.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "6.1.6",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.1",
@@ -34,7 +34,7 @@
     "prettier": "3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "9.0.4",
+    "react-redux": "^9.1.2",
     "react-router-dom": "6.21.1",
     "react-scripts": "5.0.1",
     "redux": "4.2.0",
